--- a/momento_crome/index.css
+++ b/momento_crome/index.css
@@ -1,24 +1,54 @@
 body {
-  background-color: #ecf0f1;
+  background-color: #2c3e50;
+  color: #34495e;
 }
 
 .btn {
   cursor: pointer;
 }
 
-body {
-  color: #34495e;
-}
-
 .clicked {
   color: #7f8c8d;
 }
 
+/* 3)greeting - css추가 부분 */
 .form,
 .greetings {
   display: none;
 }
-
 .showing {
   display: block;
+}
+
+/* background css 부분 */
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn 2s linear;
+}
+
+.js-title {
+  display: flex;
+  font-size: 10rem;
+  align-items: center; /* 가운데정렬이 왜안되냐 */
+}
+
+.js-toDoList {
+  text-decoration: none;
+  border-bottom: 1px solid #ffffff;
+  /* 각각의 ul을 선택해줘야하는데 js로 만든 걸 어떻게 선택하지?*/
 }
