--- a/momento_crome/index.css
+++ b/momento_crome/index.css
@@ -1,3 +1,12 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html body {
+  text-decoration: none;
+}
+
 body {
   background-color: #2c3e50;
   color: #34495e;
@@ -43,4 +52,9 @@ body {
 
 .js-title {
   font-size: 10rem;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  top: 150px;
+  position: absolute;
 }
