--- a/momento_crome/index.css
+++ b/momento_crome/index.css
@@ -8,12 +8,16 @@ html body {
 }
 
 body {
-  background-color: #2c3e50;
-  color: #34495e;
+  background-color: #4b4b4b;
+  color: #e6e6e6;
 }
 
-.btn {
+button {
   cursor: pointer;
+  background-color: transparent;
+  border: none;
+  font-size: 0.2rem;
+  margin-right: 5px;
 }
 
 .clicked {
@@ -50,11 +54,64 @@ body {
   animation: fadeIn 2s linear;
 }
 
-.js-title {
-  font-size: 10rem;
+.js-toDoList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.5rem;
+  margin-top: 15px;
+}
+
+li {
+  display: flex;
+  justify-content: center;
+}
+
+input {
+  color: #e6e6e6;
+  border: none;
+  background-color: transparent; /*input배경을 투명하게 만들어줌*/
+  border-bottom: 1px solid white;
+  width: 300px;
   text-align: center;
-  width: 100%;
-  height: 100%;
-  top: 150px;
+  font-size: 2rem;
+}
+
+input:focus {
+  outline: none;
+}
+input::placeholder {
+  color: white;
+}
+
+h1 {
+  color: white;
+  display: flex;
+  font-size: 10rem;
+  justify-content: center;
+  margin-top: 200px;
+}
+
+.form,
+.js-toDoForm {
+  position: relative;
+  text-align: center;
+}
+
+.js-weather {
+  color: white;
+  font-size: 1.1rem;
+  font-weight: 600;
   position: absolute;
+  right: 1%;
+  top: 1%;
+  text-align: right;
+}
+
+.greetings {
+  color: white;
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 15px;
 }
