--- a/Youtube_challenge/views/changePassword.pug
+++ b/Youtube_challenge/views/changePassword.pug
@@ -1,4 +1,9 @@
 extends layouts/main
 
 block content
-    p changePassword Page
+    .form-container
+        form(action=`/users${routes.changePassword}`, method="post")
+            input(type="password", name="oldPassword", placeholder="Current Password")
+            input(type="password", name="NewPassword", placeholder="New Password")
+            input(type="password", name="NewPassword1", placeholder="Verify New Password")
+            input(type="submit", value="Change Password")
