--- a/Youtube_challenge/views/editVideo.pug
+++ b/Youtube_challenge/views/editVideo.pug
@@ -1,4 +1,9 @@
 extends layouts/main
 
 block content
-    p editVideo Page
+    .form-container
+        form(action=`videos${routes.editVideo}`, method="post")
+            input(type="text", name="title", placeholder="Title")
+            textarea(name="description", placeholder="description")
+            input(type="submit", value="Update Video")
+        a.form-container__link.form-container__link--delete(href=`/users${routes.deleteVideo}`) Delete Video
