--- a/Youtube_challenge/views/upload.pug
+++ b/Youtube_challenge/views/upload.pug
@@ -1,4 +1,10 @@
 extends layouts/main
 
 block content
-    p upload Page
+    .form-container
+        form(action=`videos${routes.upload}`, method="post")
+            label(for="file") Video File
+            input(type="file", name="file", id="file")
+            input(type="text", name="title", placeholder="Title")
+            textarea(name="description", placeholder="description")
+            input(type="submit", value="Upload Video")
