--- a/Youtube_challenge/views/partials/header.pug
+++ b/Youtube_challenge/views/partials/header.pug
@@ -7,9 +7,18 @@ header.header
         input(type="text", placeholder="Search by tern...", name="term")
     div.header__column
       ul
-        li
-          a(href=routes.join) Join
-        li
-          a(href=routes.login) Log In
+        if !user.isAuthenticated
+          li
+            a(href=routes.join) Join
+          li
+            a(href=routes.login) Log In
+        else
+          li
+            a(href=`/videos${routes.upload}`) Upload
+          li
+            a(href=routes.userDetail(user.id)) Profile
+          li
+            a(href=routes.logout) Log Out
+
 
 //- form(action=routes.search, method="get") 여기서 get메소드가 url에 정보를 추가시켜준다. 
