--- a/Youtube_challenge/views/upload.pug
+++ b/Youtube_challenge/views/upload.pug
@@ -2,9 +2,9 @@ extends layouts/main
 
 block content
     .form-container
-        form(action=`videos${routes.upload}`, method="post")
+        form(action=`/videos${routes.upload}`, method="post")
             label(for="file") Video File
-            input(type="file", name="file", id="file")
-            input(type="text", name="title", placeholder="Title")
-            textarea(name="description", placeholder="description")
+            input(type="file", name="file", id="file", required=true)
+            input(type="text", name="title", placeholder="Title", required=true)
+            textarea(name="description", placeholder="description", required=true)
             input(type="submit", value="Upload Video")
