day7 나에겐 너무 어렵다 T.T

--- a/Youtube_challenge/views/home.pug
+++ b/Youtube_challenge/views/home.pug
@@ -12,4 +12,4 @@ block content
           })
         
 //- video = 변수명으로 원하는 변수명으로 설정 할 수 있다.
-//- template의 videos는 controller에서 전달한 videos와 이름이 같양 ㅏ한다.
+//- 이 template의 videos는 controller에서 전달한 videos와 이름이 같아야한다.
