--- a/JS-Basic/DoIt-js-basic-book-master/04/css/gugudan.css
+++ b/JS-Basic/DoIt-js-basic-book-master/04/css/gugudan.css
@@ -1,11 +1,17 @@
 		div {
-			display:inline-block;
-			padding:0 20px 30px 20px;
-			margin:15px;
-			border:1px solid #ccc;
-			line-height:2;
+			display: inline-block;
+			padding: 0 20px 30px 20px;
+			margin: 15px;
+			border: 1px solid #ccc;
+			line-height: 2;
 		}
-		div h3 {
-			text-align:center;
-			font-weight:bold;
+
+		div h2 {
+			text-align: center;
+			font-weight: bold;
+		}
+
+		h1 {
+			text-align: center;
+			font-weight: bold;
 		}
