--- a/momento_chrome/index.css
+++ b/momento_chrome/index.css
@@ -10,6 +10,54 @@ html body {
 body {
   background-color: #4b4b4b;
   color: #e6e6e6;
+  width: 100%;
+  height: 100%;
+}
+
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-width: 1000px;
+  height: 100%;
+  min-height: 800px;
+  z-index: -1;
+  animation: fadeIn 2s linear;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+/* background opacity효과 */
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.js-clock {
+  margin-bottom: 20px;
+}
+
+h1 {
+  color: white;
+  display: flex;
+  font-size: 13rem;
+  justify-content: center;
+  margin-top: 180px;
+}
+
+.greetings {
+  color: white;
+  font-size: 4rem;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 button {
@@ -24,34 +72,13 @@ button {
   color: #7f8c8d;
 }
 
-/* 3)greeting - css추가 부분 */
 .form,
 .greetings {
   display: none;
 }
+
 .showing {
   display: block;
-}
-
-/* background css 부분 */
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-.bgImage {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  animation: fadeIn 2s linear;
 }
 
 .js-toDoList {
@@ -65,6 +92,7 @@ button {
 li {
   display: flex;
   justify-content: center;
+  margin-bottom: 10px;
 }
 
 input {
@@ -84,18 +112,11 @@ input::placeholder {
   color: white;
 }
 
-h1 {
-  color: white;
-  display: flex;
-  font-size: 10rem;
-  justify-content: center;
-  margin-top: 200px;
-}
-
 .form,
 .js-toDoForm {
   position: relative;
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .js-weather {
@@ -106,12 +127,4 @@ h1 {
   right: 1%;
   top: 1%;
   text-align: right;
-}
-
-.greetings {
-  color: white;
-  font-size: 2.5rem;
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 15px;
 }
