--- a/JS-Basic/DoIt-js-basic-book-master/06_Object/css/obj.css
+++ b/JS-Basic/DoIt-js-basic-book-master/06_Object/css/obj.css
@@ -1,9 +1,10 @@
-		#display {
-			width:500px;
-			margin:20px auto;
-			padding:10px;
-			border:1px solid #ccc;
-			text-align:center;
-			font-size:20px;
-			line-height:30px;
-		}
+#displayQuantity,
+#displayPrice {
+  width: 700px;
+  margin: 20px auto;
+  padding: 10px;
+  border: 1px solid #ccc;
+  text-align: center;
+  font-size: 20px;
+  line-height: 30px;
+}
