--- a/JS-Basic/DoIt-js-basic-book-master/project/sign-in/style.css
+++ b/JS-Basic/DoIt-js-basic-book-master/project/sign-in/style.css
@@ -1,9 +1,14 @@
+body {
+  background-color: gray;
+  padding: 20px 20px;
+  font-size: 18px;
+}
+
 .main__container {
   display: flex;
   justify-content: flex-start;
   width: 100%;
   color: white;
-  background-color: gray;
   padding: 20px 20px;
 }
 
@@ -34,10 +39,18 @@ input {
 input::placeholder {
   color: white;
   opacity: 0.2;
+  padding: 0px 5px;
+  font-size: 14px;
 }
 
 .form__input {
   margin: 0px 10px;
+}
+
+#userBirth {
+  width: 160px;
+  padding: 0px 10px;
+  font-size: 14px;
 }
 
 .gender-box {
@@ -51,13 +64,14 @@ input::placeholder {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 20px;
+  margin-left: 75px;
 }
 
 .radio__input {
-  margin-right: 20px;
   width: 20px;
+  margin: 10px 10px;
 }
+
 .agree--label {
   display: flex;
   align-items: center;
